# Copyright (C) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/miscservices/time/time.gni")
import("//build/ohos.gni")

config("time_service_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "include",
    "//utils/system/safwk/native/include",
    "//third_party/json/include",
  ]

  cflags_cc = [ "-fexceptions" ]
}

ohos_shared_library("time_service") {
  sources = [
    "src/time_service.cpp",
    "src/time_service_manager.cpp",
    "src/time_service_proxy.cpp",
    "src/time_service_stub.cpp",
  ]
  public_configs = [
    "//utils/native/base:utils_config",
    ":time_service_config",
  ]
  deps = [
    "//foundation/appexecfwk/standard/interfaces/innerkits/libeventhandler:libeventhandler",
    "//foundation/distributedschedule/safwk/interfaces/innerkits/safwk:system_ability_fwk",
    "//foundation/distributedschedule/samgr/interfaces/innerkits/samgr_proxy:samgr_proxy",
    "//utils/native/base:utils",
  ]
  external_deps = [
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
  ]
  subsystem_name = "miscservices"
  part_name = "time_native"
}
